2005-05-17  Helvetix Victorinox  <helvetix@gimp.org>

	* app/composite/gimp-composite-sse2.c:
	Trying to be more flexible in register use so the compiler can do
	reloads without running out of registers when using optimisation
	modes other than 2.

	Avoid the message "error: can't find a register in class
	`GENERAL_REGS' while reloading `asm'"

	* app/composite/gimp-composite-x86.h
	Use more newlines in asm() macros to ensure that gcc gets the
	instruction count correct.  This is partially complete as of this
	commit.

	
2005-05-17  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version number to 2.3.1.

2005-05-17  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/vectors.pdb: Make gimp_vectors_get_strokes()
	work, add gimp_vectors_stroke_translate()  (I am not sure if this
	stays in the API, I am currently testing undo and freeze/thaw
	issues...)

	* app/pdb/internal_procs.c
	* app/pdb/vectors_cmds.c
	* libgimp/gimpvectors_pdb.[ch]: regenerated.

2005-05-17  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpvectors.[ch]: added gimp_vectors_get_n_strokes ();
	* tools/pdbgen/pdb/vectors.pdb: Attempt to fill an array with IDs,
	does not yet work.

	* app/pdb/vectors_cmds.c
	* libgimp/gimpvectors_pdb.c: regenerated.

2005-05-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/jpeg/jpeg-load.c: Don't detach from drawable if
	it belongs to a preview layer.  Fixes bug #304352.
	
2005-05-16  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/procedural_db.pdb: fixed typo in API docs.

	* app/pdb/procedural_db_cmds.c
	* libgimp/gimpproceduraldb_pdb.c: regenerated.

2005-05-16  Sven Neumann  <sven@gimp.org>

	* app/config/gimpxmlparser.c (gimp_xml_parser_parse_buffer): check
	encoding being not NULL before accessing it; added gtk-doc comment.

2005-05-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpclipboard.[ch]: added gimp_clipboard_has_svg()
	and gimp_clipboard_get_svg().
