@@ -10,6 +10,8 @@ SUBDIRS = $(D_pdbgen)
 
 bin_PROGRAMS = $(GIMP_REMOTE)
 
+noinst_PROGRAMS = test-clipboard
+
 EXTRA_PROGRAMS = \
 	gimp-remote-2.3	\
 	kernelgen
@@ -21,6 +23,11 @@ gimp_remote_2_3_LDADD = \
 	$(LIBXMU)
 
 kernelgen_SOURCES = kernelgen.c
+
+test_clipboard_SURCES = test-clipboard.c
+
+test_clipboard_LDADD = \
+	$(GTK_LIBS)
 
 AM_CPPFLAGS = \
 	-DGIMP_APP_VERSION=\"@GIMP_APP_VERSION@\"	\
