@@ -1,3 +1,9 @@
+2005-05-18  Michael Natterer  <mitch@gimp.org>
+
+	* tools/Makefile.am
+	* tools/test-clipboard.c: new file, a test hack for clipboard
+	debugging.
+
 2005-05-17  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* app/composite/gimp-composite-sse2.c:
